...
        android:contentDescription="@string/monster_animation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="131dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:layout_editor_absoluteX="-1dp"
    />

    <Button
        android:id="@+id/settings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/settings"
        android:contentDescription="@string/setting"
        android:foreground="@drawable/settings"
        android:padding="0dp"
...
