<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".WebApp">
    <WebView
        android:id="@+id/web_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </WebView>

    <ImageView
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:contentDescription="@string/back"
        android:padding="4dp"
        android:src="@drawable/cancel">
    </ImageView>

</RelativeLayout>